# Zappy

./: .gitignore  CMakeLists.txt  Makefile  Makefile.ai  Makefile.server  a.out  client  launcher  server  test.c  toto
include/: ai_modes.h  arg_parser.h  broadcast.h  broadcast_parser.h  circbuff.h  client.h  client_connection.h  client_parser.h  client_sender.h  linked_list.h  map.h  map_debug.h  parser.h  ressources_str.h  server_const.h  server_function.h  server_struct.h  utils.h  zappy_socket.h
src/ai_client/: cleanup.c  connect.c  handle_server.c  help.c  launch_ai.c  launch_server.c  main.c  move_to_target.c  parser.c  searcher_set_target.c  tile_actions.c  tile_ratio.c  tile_ratio_list.c
src/ai_client/ai/: conditions.c  eater.c  follower.c  launch_ai.c  searcher.c  shouter.c  test.c
src/ai_client/brodcasts/: broadcast_adder.c  broadcast_parser.c  broadcast_parser_setters.c  broadcast_searcher.c  broadcast_timer.c
src/ai_client/commands/: pre_requests.c  sender.c  srv_requests.c
src/ai_client/commands/send/: broadcast.c  connect_nbr.c  eject.c  fork.c  forward.c  incantation.c  incantation_wait.c  inventory.c  left.c  look.c  right.c  sender.c  set.c  take.c
src/arg_parser/: arg_parser_cleanup.c  parse_arguments.c
src/circular_buffer/: circbuff_buf.c  circbuff_print.c  circbuff_strings.c
src/common/arg_parser/: arg_parser_cleanup.c  arg_parser_initialisation.c  argument_regex.c  parse_arguments.c
src/common/arg_parser/parsing_functions/: arg_parser_string.c
src/common/circular_buffer/: circbuff.c  circbuff_buf.c  circbuff_file.c  circbuff_print.c  circbuff_strings.c  circbuff_utils.c
src/common/command_parser/: command_parser.c  my_strtok.c
src/common/linked_list/: linked_list_add.c  linked_list_create.c  linked_list_delete.c
src/common/map/: create_map.c  free_map.c  map_create.c  map_debug.c  map_food.c  map_free.c  map_orientation.c  map_print.c  map_str_to_tile.c  map_tile_to_str.c  map_vector.c  print_map.c
src/common/socket/: socket_cleanup.c  socket_initialisation.c
src/common/utils/: epurstr.c  is_str.c  str_append.c  tab_cpy.c
src/graph_client/: CMakeLists.txt  GameInfo.cpp  GameInfo.hpp  main.cpp  map.zpy
src/graph_client/manager/: Clock.cpp  Clock.hpp  GameManager.cpp  GameManager.hpp  ModuleLauncher.cpp  ModuleLauncher.hpp
src/graph_client/modules/: ASfmlModule.hpp  CsvParser.hpp  ISfmlModule.hpp  SfmlModuleMyWorld.cpp  SfmlModuleMyWorld.hpp
src/linked_list/: linked_list_advanced.c  linked_list_basic.c  linked_list_conditional.c  linked_list_get.c  list_clean.c
src/server/: find_player.c  game_end.c  main.c  send_messages.c  server_cleanup.c  server_initialisation.c  server_loop.c  server_parse_arg.c  server_parse_arg_func.c
src/server/ai_commands/: broadcast.c  connect_nbr.c  eject.c  fork.c  forward.c  incantation.c  inventory.c  left.c  look.c  right.c  set.c  take.c
src/server/argument/: cleanup_server_arguments.c  server_check_arg.c  server_parse_arg.c  server_parse_arg_func.c
src/server/commands/: ai_command_exec.c  command_exec.c  command_parse.c  graphic_command_exec.c  join_team.c
src/server/commands/ai_commands/: broadcast.c  connect_nbr.c  eject.c  fork.c  forward.c  incantation.c  incantation_end.c  inventory.c  left.c  look.c  right.c  set.c  take.c
src/server/commands/graphic_commands/: bct.c  mct.c  msz.c  pin.c  pln.c  plv.c  ppo.c  sgt.c  sst.c  tna.c
src/server/connection/: poll_accept.c  poll_cleanup.c  poll_initialisation.c  poll_loop.c
src/server/graphic_commands/: bct.c  mct.c  msz.c  pln.c  plv.c  ppo.c  sgt.c  sst.c  tna.c
src/server/map/: create_map.c
src/server/team/: team_action.c  team_cleanup.c  team_initialisation.c  team_search.c
src/server/timer/: server_timer.c  timer_action.c  timer_check.c  timer_cleanup.c  timer_initialisation.c  user_timer_action.c
src/server/user/: user_action.c  user_cleanup.c  user_config_check_file.c  user_get.c  user_initialisation.c  user_quit.c  user_search.c
src/unity_client/Assets/: Chunk.cs  ConnectMenu.cs  Egg.cs  Fail.unity  FlyCamera.cs  Game.unity  GameEvent.cs  GemLevitation.cs  GemRotate.cs  MainMenu.cs  Map.cs  MapCube.prefab  Menu.unity  MenuConnection.unity  New Terrain 1.asset  New Terrain.asset  Particle System.prefab  Particle.mat  Player.cs  PlayerSkin.cs  SliderDrag.cs  Splash.unity  SplashScreen.cs  Tree 1.prefab  Tree 2.prefab  Tree.prefab  UnityMainThreadDispatcher.cs
src/unity_client/Assets/Character_Elf/: Scene.unity
src/unity_client/Assets/Menu/: LightingData.asset
src/unity_client/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
src/unity_client/test_Data/: boot.config  globalgamemanagers  globalgamemanagers.assets  level0  level0.resS
src/unity_client/test_Data/Managed/: Assembly-CSharp.dll.mdb  UnityEngine.AIModule.dll.mdb  UnityEngine.ARModule.dll.mdb  UnityEngine.AccessibilityModule.dll.mdb  UnityEngine.AnimationModule.dll.mdb  UnityEngine.AudioModule.dll.mdb  UnityEngine.ClothModule.dll.mdb  UnityEngine.ClusterInputModule.dll.mdb  UnityEngine.ClusterRendererModule.dll.mdb  UnityEngine.CoreModule.dll.mdb  UnityEngine.CrashReportingModule.dll.mdb  UnityEngine.DirectorModule.dll.mdb  UnityEngine.GameCenterModule.dll.mdb  UnityEngine.GridModule.dll.mdb  UnityEngine.IMGUIModule.dll.mdb  UnityEngine.ImageConversionModule.dll.mdb  UnityEngine.InputModule.dll.mdb  UnityEngine.JSONSerializeModule.dll.mdb  UnityEngine.ParticleSystemModule.dll.mdb  UnityEngine.ParticlesLegacyModule.dll.mdb  UnityEngine.Physics2DModule.dll.mdb  UnityEngine.PhysicsModule.dll.mdb  UnityEngine.ScreenCaptureModule.dll.mdb  UnityEngine.SharedInternalsModule.dll.mdb  UnityEngine.SpriteMaskModule.dll.mdb  UnityEngine.StyleSheetsModule.dll.mdb  UnityEngine.TerrainModule.dll.mdb  UnityEngine.TextRenderingModule.dll.mdb  UnityEngine.TilemapModule.dll.mdb  UnityEngine.UIElementsModule.dll.mdb  UnityEngine.UIModule.dll.mdb  UnityEngine.UNETModule.dll.mdb  UnityEngine.UnityAnalyticsModule.dll.mdb  UnityEngine.UnityConnectModule.dll.mdb  UnityEngine.VRModule.dll.mdb  (+8 more)
test/: test.sh
zappy_server.dSYM/Contents/: Info.plist
(+43 files in other folders)
